@@ -7,7 +7,7 @@
 //
 // **********************************************************************
 
-// Generated by makeprops.py from file `../config/PropertyNames.def', Tue Nov 30 12:31:17 2004
+// Generated by makeprops.py from file `../config/PropertyNames.def', Fri Dec  3 15:44:09 2004
 
 // IMPORTANT: Do not edit this file -- any edits made here will be lost!
 
@@ -173,7 +173,6 @@ namespace IceInternal
             "IcePatch2.Admin.ThreadPool.StackSize",
             "IcePatch2.ChunkSize",
             "IcePatch2.Directory",
-            "IcePatch2.DryRun",
             "IcePatch2.Endpoints",
             "IcePatch2.PublishedEndpoints",
             "IcePatch2.Thorough",
