@@ -154,6 +154,11 @@ dictionary<string, MyEnum> StringMyEnumD;
     void opDerived();
 };
 
+interface TestCheckedCast
+{
+    Ice::Context getContext();
+};
+
 };
 
 #endif
